--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,3 @@
 PORT=4000
 JWT_SECRET=dev_secret_change_me
-DATABASE_URL=postgres://user:password@localhost:5432/suraksha
+MONGODB_URI=mongodb://localhost:27017/suraksha
