--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.5",
+    "mongoose": "^8.6.0",
     "socket.io": "^4.7.5",
     "zod": "^3.23.8"
   },
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.30",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
