--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,3 @@
 PORT=4000
 JWT_SECRET=dev_secret_change_me
-MONGODB_URI=mongodb://localhost:27017/suraksha
+MONGODB_URI=mongodb+srv://suraksha:Ankita1477@suraksha.l0l98tg.mongodb.net/
