--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,9 @@
 PORT=4000
 JWT_SECRET=dev_secret_change_me
 MONGODB_URI=mongodb+srv://suraksha:Ankita1477@suraksha.l0l98tg.mongodb.net/
+
+# Seed a dashboard user
+SEED_DASH_EMAIL=admin@suraksha.local
+SEED_DASH_PASSWORD=ChangeMe!123
+# admin or officer are recommended for dashboard
+SEED_DASH_ROLE=admin
