--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,11 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
-    "lint": "echo 'Add ESLint later'"
+    "lint": "echo 'Add ESLint later'",
+    "seed": "ts-node-dev --transpile-only src/scripts/seed.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -25,9 +29,15 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.30",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.1.3",
+    "mongodb-memory-server": "^10.2.1",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
