--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -6,28 +6,42 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "expo": "~54.0.7",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.4",
+    "@expo/vector-icons": "^15.0.2",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/native-stack": "^7.0.2",
+    "@types/react-native": "^0.72.8",
+    "axios": "^1.7.7",
+    "expo": "~54.0.7",
+    "expo-location": "~18.0.1",
+    "expo-secure-store": "~13.0.2",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-maps": "^1.14.0",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.5.0",
-    "react-native-maps": "^1.14.0",
-    "expo-location": "~18.0.1",
-    "axios": "^1.7.7",
+    "react-native-web": "^0.21.0",
     "socket.io-client": "^4.7.5",
-    "zustand": "^5.0.0",
-    "expo-secure-store": "~13.0.2",
-    "react-dom": "19.1.0",
-    "react-native-web": "^0.21.0"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
+    "axios-mock-adapter": "^2.1.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
+    "jest-environment-node": "^30.1.2",
+    "react-test-renderer": "^19.1.0",
+    "ts-jest": "^29.4.2",
     "typescript": "~5.9.2"
   },
   "private": true
