--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -18,9 +18,14 @@
     "@types/react-native": "^0.72.8",
     "axios": "^1.7.7",
     "expo": "~54.0.7",
+    "expo-background-fetch": "^14.0.7",
+    "expo-constants": "^18.0.8",
+    "expo-device": "^8.0.7",
     "expo-location": "~18.0.1",
+    "expo-notifications": "^0.32.11",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~3.0.8",
+    "expo-task-manager": "^14.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
