--- a/mobile-app/.env.production
+++ b/mobile-app/.env.production
@@ -2,8 +2,8 @@
 NODE_ENV=production
 
 # API Configuration
-API_BASE_URL=https://api.surakshatrava.com/api
-WS_BASE_URL=wss://api.surakshatrava.com
+API_BASE_URL=http://192.168.31.36:4000/api
+WS_BASE_URL=ws://192.168.31.36:4000
 
 # App Configuration
 APP_NAME=Suraksha Yatra
