--- a/mobile-app/.env.staging
+++ b/mobile-app/.env.staging
@@ -2,8 +2,8 @@
 NODE_ENV=staging
 
 # API Configuration
-API_BASE_URL=https://staging-api.surakshatrava.com/api
-WS_BASE_URL=wss://staging-api.surakshatrava.com
+API_BASE_URL=http://192.168.31.36:4000/api
+WS_BASE_URL=ws://192.168.31.36:4000
 
 # App Configuration
 APP_NAME=Suraksha Yatra (Staging)
