--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -13,24 +13,26 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/native-stack": "^7.0.2",
     "@types/react-native": "^0.72.8",
     "axios": "^1.7.7",
-    "expo": "~54.0.7",
+    "expo": "54.0.8",
     "expo-background-fetch": "^14.0.7",
     "expo-constants": "^18.0.8",
     "expo-device": "^8.0.7",
-    "expo-location": "~18.0.1",
+    "expo-linear-gradient": "^15.0.7",
+    "expo-location": "~19.0.7",
     "expo-notifications": "^0.32.11",
-    "expo-secure-store": "~13.0.2",
+    "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-task-manager": "^14.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-maps": "^1.14.0",
-    "react-native-safe-area-context": "^5.0.0",
+    "react-native-maps": "1.20.1",
+    "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.5.0",
     "react-native-web": "^0.21.0",
     "socket.io-client": "^4.7.5",
@@ -42,7 +44,7 @@
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
     "axios-mock-adapter": "^2.1.0",
-    "jest": "^30.1.3",
+    "jest": "~29.7.0",
     "jest-environment-jsdom": "^30.1.2",
     "jest-environment-node": "^30.1.2",
     "react-test-renderer": "^19.1.0",
