--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -13,10 +13,14 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/leaflet-draw": "^1.0.13",
     "axios": "^1.12.2",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
@@ -29,11 +33,14 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "jsdom": "^27.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
