--- a/ai-service/.env
+++ b/ai-service/.env
@@ -1,9 +1,9 @@
 # AI Service Configuration
 AI_HOST=0.0.0.0
 AI_PORT=5000
-DEBUG=false
+DEBUG=true
 
-# Database Configuration
+# Database Configuration - Same as backend
 MONGODB_URL=mongodb+srv://suraksha:Ankita1477@suraksha.l0l98tg.mongodb.net/suraksha?retryWrites=true&w=majority&appName=suraksha
 MONGODB_DATABASE=suraksha
 
