--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,9 @@
 PORT=4000
 JWT_SECRET=dev_secret_change_me
-MONGODB_URI=mongodb+srv://suraksha:Ankita1477@suraksha.l0l98tg.mongodb.net/
+MONGODB_URI=mongodb+srv://suraksha:Ankita1477@suraksha.l0l98tg.mongodb.net/suraksha?retryWrites=true&w=majority&appName=suraksha
+
+# AI Service Configuration
+AI_SERVICE_URL=http://localhost:5000
 
 # Seed a dashboard user
 SEED_DASH_EMAIL=admin@suraksha.local
