--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -61,7 +61,9 @@
     "extra": {
       "eas": {
         "projectId": "067d0107-cf44-45f7-93ba-6e67b9e21981"
-      }
+      },
+      "API_BASE_URL": "http://192.168.31.36:4000/api",
+      "WS_BASE_URL": "ws://192.168.31.36:4000"
     },
     "owner": "rishukr"
   }
