--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,27 @@
 {
   "name": "suraksha-backend",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Backend API for Suraksha Yatra safety application",
+  "main": "dist/server.js",
   "private": true,
   "type": "commonjs",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
+    "postbuild": "echo 'Build completed successfully'",
     "lint": "echo 'Add ESLint later'",
     "seed": "ts-node-dev --transpile-only src/scripts/seed.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:ai": "ts-node-dev --transpile-only src/scripts/testAiProxy.ts",
+    "diagnose:ai": "ts-node-dev --transpile-only src/scripts/diagnoseAI.ts",
+    "health": "curl http://localhost:4000/api/health || echo 'Health check failed'"
   },
   "dependencies": {
     "axios": "^1.6.0",
