--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -29,6 +29,7 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "com.surakshatrava.app",
+      "versionCode": 1,
       "permissions": [
         "ACCESS_FINE_LOCATION",
         "ACCESS_COARSE_LOCATION",
@@ -62,8 +63,8 @@
       "eas": {
         "projectId": "067d0107-cf44-45f7-93ba-6e67b9e21981"
       },
-      "API_BASE_URL": "http://192.168.31.36:4000/api",
-      "WS_BASE_URL": "ws://192.168.31.36:4000"
+      "API_BASE_URL": "https://suraksha-backend-cz74.onrender.com/api",
+      "WS_BASE_URL": "wss://suraksha-backend-cz74.onrender.com"
     },
     "owner": "rishukr"
   }
