--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -21,6 +21,7 @@
     "expo": "54.0.8",
     "expo-background-fetch": "^14.0.7",
     "expo-constants": "^18.0.8",
+    "expo-dev-client": "~6.0.12",
     "expo-device": "^8.0.7",
     "expo-linear-gradient": "^15.0.7",
     "expo-location": "~19.0.7",
